# tree-sitter-metamath

./: .gitattributes  .gitmodules  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-metamath.pc.in
bindings/c/tree_sitter/: tree-sitter-metamath.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_metamath/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterMetamathTests/: TreeSitterMetamathTests.swift
opt/set.mm/: changes-set.txt  constr.mm  discouraged  iset-discouraged  mm_100.html  mmil.raw.html  mmset.raw.html  nf.mm  set-mathml.mmts
opt/set.mm/.github/workflows/: verifiers.yml
opt/set.mm/scripts/: check-theorem-list  latex_collector.py
scripts/: make_tests.sh
src/: grammar.json  node-types.json  parser.c
test/corpus/: big-unifier.mm.txt  constr.mm.txt  demo0.mm.txt  hol.mm.txt  iset.mm.txt  miu.mm.txt  nf.mm.txt  peano.mm.txt  ql.mm.txt  set.mm.txt
