[package]
name = "tree-sitter-metamath"
description = "A simple and flexible computer-processable language that supports rigorously verifying, archiving, and presenting mathematical proofs."
version = "1.0.0"
authors = ["Ramiro Santa Ana Anguiano <hi@colima.press>"]
license = "GPL-2.0"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "metamath"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-metamath"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.8"
