[build-system]
requires = ["setuptools>=62.4.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-metamath"
description = "A simple and flexible computer-processable language that supports rigorously verifying, archiving, and presenting mathematical proofs."
version = "1.0.0"
keywords = ["incremental", "parsing", "tree-sitter", "metamath"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Ramiro Santa Ana Anguiano", email = "hi@colima.press" }]
requires-python = ">=3.10"
license.text = "GPL-2.0"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/tree-sitter/tree-sitter-metamath"

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
